# SciComp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLAUDE_REMOVAL_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_VERIFICATION.md  Dockerfile  FINAL_COMPLETION_SUMMARY.md  FINAL_DEPLOYMENT_REPORT.md  FRAMEWORK_COMPLETION_SUMMARY.md  IMPLEMENTATION_STATUS.md  LICENSE  LICENSE.txt  Makefile  PARITY_REPORT.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PROJECT_COMPLETION_FINAL.md  PROJECT_COMPLETION_SUMMARY.md  README.md  REPOSITORY_SAVE_POINT.md  SECURITY.md  ScieComp-tree.txt  USAGE_EXAMPLES.md  benchmark_performance.py  berkeley_config.json  berkeley_setup.py  demo_integrated_framework.py  environment.yml  gitignore_berkeley.txt  pyproject.toml  requirements-berkeley.txt  requirements-dev.txt  requirements.txt  setup.py  (+2 more)
.backup_20250807_151803/: DEPLOYMENT_CHECKLIST.md  README.md  requirements-dev.txt  requirements.txt  setup.py
.backup_20250807_151803/Python/: __init__.py  init_berkeley.py
.backup_20250807_151803/docs/: GPU_TESTING_GUIDE.md  conf.py
.backup_20250807_151803/examples/: real_world_applications.py
.backup_20250807_151803/scripts/: auto_fix_consistency.py  consistency_check.py  deploy_framework.py  generate_api_docs.py  generate_clean_visuals.py  validate_control_cross_platform.py  validate_framework.py
.backup_20250807_151803/tests/: test_stochastic.py
.github/workflows/: berkeley-ci.yml  ci.yml
MATLAB/: startup.m
MATLAB/Crystallography/: README.md
MATLAB/FEM/: README.md
MATLAB/FEM/core/: Mesh.m  (+2 more)
MATLAB/Optics/: README.md  init_optics.m
MATLAB/Optimization/: optimization_demo.m
MATLAB/QuantumOptics/: README.md
MATLAB/Quantum_Materials/: README.md
MATLAB/Spintronics/: README.md
MATLAB/Thermal_Transport/: README.md
MATLAB/engineering/: heat_transfer_analysis.m
MATLAB/quantum_computing/: VQE.m
MATLAB/quantum_physics/: QuantumHarmonic.m  schrodinger_solver.m
MATLAB/statistical_physics/: MonteCarloIsing.m
MATLAB/visualization/: setBerkeleyDefaults.m
Mathematica/Control/: README.md
Mathematica/FEM/: README.md
Mathematica/Linear_Algebra/: README.md
Mathematica/Optimization/: README.md
Mathematica/Quantum/: README.md
Mathematica/QuantumPhysics/: QuantumHarmonic.nb  VQEAlgorithm.nb
Mathematica/Signal_Processing/: README.md
Mathematica/Stochastic/: README.md
Mathematica/Symbolic_Algebra/: README.md
Mathematica/Thermal_Transport/: README.md
Mathematica/quantum_physics/: quantum_harmonic_oscillator.nb
Python/: __init__.py  init_berkeley.py
Python/Control/: README.md
Python/Crystallography/: __init__.py
Python/Elasticity/: README.md
Python/FEM/: __init__.py
Python/Linear_Algebra/: README.md  __init__.py  test_functionality.py
Python/Machine_Learning/: README.md  __init__.py  neural_networks.py  physics_informed.py
Python/Monte_Carlo/: integration.py  optimization.py
Python/Multiphysics/: README.md  __init__.py  coupling.py  thermal_mechanical.py  visualization.py
Python/ODE_PDE/: boundary_conditions.py  nonlinear_solvers.py  spectral_methods.py
Python/Optics/: __init__.py  wave_optics.py
Python/Optimization/: README.md  __init__.py  constrained.py  linear_programming.py  multi_objective.py  unconstrained.py  utils.py
Python/Plotting/: __init__.py
Python/Quantum/: README.md  __init__.py
Python/QuantumOptics/: __init__.py
Python/Signal_Processing/: spectral_analysis.py
Python/Spintronics/: README.md  __init__.py
Python/Stochastic/: README.md  stochastic_processes.py
Python/Symbolic_Algebra/: __init__.py
Python/Thermal_Transport/: __init__.py
Python/gpu_acceleration/: cuda_kernels.py
Python/ml_physics/: __init__.py  physics_informed_nn.py
Python/quantum_computing/: __init__.py
Python/quantum_physics/: __init__.py
Python/utils/: __init__.py  advanced_analytics.py  cli.py  cloud_integration.py  constants.py  file_io.py  parallel.py  performance_optimizer.py  units.py
Python/visualization/: __init__.py  berkeley_style.py
assets/: BerkeleyStyle.wl  STYLE_GUIDE.md  berkeley_style.m  berkeley_style.py
config/: berkeley_theme.json  physics_constants.json
docs/: API_REFERENCE.md  GPU_TESTING_GUIDE.md  INSTALLATION_GUIDE.md  README.md  conf.py  design_specifications.md
docs/api/: advanced_analytics.md  assembly.md  beam_theory.md  berkeley_style.md  cavity_qed.md  cli.md  cloud_integration.md  constants.md  constrained.md  coupling.md  cuda_kernels.md  diffraction.md  file_io.md  finite_element.md  finite_elements.md  fluid_structure.md  fourier_transforms.md  heat_conduction.md  linear_programming.md  mesh_generation.md  multi_objective.md  nonlinear_solvers.md  optical_materials.md  optimization.md  parallel.md  pde_solvers.md  performance_optimizer.md  physics_informed_nn.md  post_processing.md  sampling.md  scientific_plots.md  space_groups.md  spectral_analysis.md  spin_dynamics.md  spin_transport.md  state_space.md  stress_strain.md  test_functionality.md  transport.md  units.md  (+2 more)
docs/theory/: computational_methods.md  engineering_applications.md  ml_physics_theory.md  quantum_mechanics_theory.md
examples/: advanced_usage_demo.py  comprehensive_demo.py  cross_platform_demonstrations.py  integrated_quantum_demo.py  real_world_applications.py
examples/advanced/: quantum_ml_integration.py
examples/beginner/: basic_physics.py  getting_started.py  harmonic_oscillator_demo.py
examples/cross_platform/: quantum_harmonic_comparison.py
notebooks/: interactive_demo.ipynb
scripts/: auto_fix_consistency.py  clean_git_history.sh  comprehensive_test_suite.py  consistency_check.py  deploy.py  deploy_framework.py  enforce_parity.py  generate_api_docs.py  generate_clean_visuals.py  generate_overview_diagram.py  integration_tests.py  master_test_runner.py  monitor.py  performance_benchmarks.py  performance_regression_tests.py  quick_deployment_check.py  security_audit.py  validate_control_matlab.m  validate_framework.py
tests/: run_all_tests.py  test_signal_processing.py
(+325 files in other folders)
